<?xml version="1.0" encoding="utf-8"?>
<!--
/* Copyright 2015, The Android Open Source Project
**
** Licensed under the Apache License, Version 2.0 (the "License");
** you may not use this file except in compliance with the License.
** You may obtain a copy of the License at
**
**     http://www.apache.org/licenses/LICENSE-2.0
**
** Unless required by applicable law or agreed to in writing, software
** distributed under the License is distributed on an "AS IS" BASIS,
** WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
** See the License for the specific language governing permissions and
** limitations under the License.
*/
-->
<ImageButton xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/overflow"
    android:layout_width="@dimen/floating_toolbar_menu_image_button_width"
    android:layout_height="@dimen/floating_toolbar_height"
    android:paddingStart="@dimen/floating_toolbar_menu_button_side_padding"
    android:paddingTop="@dimen/floating_toolbar_menu_image_button_vertical_padding"
    android:paddingEnd="@dimen/floating_toolbar_menu_button_side_padding"
    android:paddingBottom="@dimen/floating_toolbar_menu_image_button_vertical_padding"
    android:scaleType="centerInside"
    android:background="?attr/actionBarItemBackground" />
